--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "txtsub",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "txtsub is a Pub/sub for Node.js with text file",
   "homepage": "http://github.com/satkaku/txtsub",
   "main": "index.js",
@@ -14,9 +14,11 @@
     "url": "git://github.com/satkaku/txtsub.git"
   },
   "dependencies": {
+    "diff": "^1.0.8",
     "inherits": "^2.0.1"
   },
   "devDependencies": {
+    "async": "^0.9.0",
     "chai": "^1.10.0",
     "mocha": "^2.0.1",
     "should": "^4.3.0"
